# crimson-nebula

./: .gitignore  main.py  pyproject.toml
notebooks/: crimson_nebula.py  crimson_nebula_with_pca.py  crimson_nebula_without_pca.py
notebooks/__marimo__/: crimson_nebula.ipynb  crimson_nebula_without_pca.ipynb
notebooks/__marimo__/session/: crimson_nebula.py.json  crimson_nebula_with_pca.py.json  crimson_nebula_without_pca.py.json
src/gradio/: app.py
