[project]
name = "crimson-nebula"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "marimo>=0.19.4",
    "matplotlib==3.8.2",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "setuptools>=80.9.0",
    "ydata-profiling==4.8.3",
]
