[project]
name = "crimson-nebula"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=6.4.0",
    "marimo>=0.19.6",
    "matplotlib==3.8.2",
    "mlflow>=3.8.1",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "pandas-stubs~=2.1.4",
    "setuptools>=80.9.0",
    "ydata-profiling==4.8.3",
]
